force-app/main/default/objects/Opportunity/fields/Donorbox_Chargeback_Status__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Chargeback_Status__c</fullName>
    <label>Donorbox Chargeback Status</label>
    <length>40</length>
    <type>Text</type>
    <description>Set from donation.chargeback_created/_won/_lost events (value: created, won or lost). Null when no chargeback has been reported for this donation.</description>
</CustomField>