force-app/main/default/objects/Opportunity/fields/Donorbox_Donation_Id__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Donation_Id__c</fullName>
    <label>Donorbox Donation Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>Donorbox donation id used as the idempotency key when Donorbox retries a webhook delivery.</description>
</CustomField>