force-app/main/default/objects/Opportunity/fields/Donorbox_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Event_Type__c</fullName>
    <label>Donorbox Event Type</label>
    <length>100</length>
    <type>Text</type>
    <description>Raw event/trigger type as sent by Donorbox (e.g. donation, donation.refunded, recurring_donation.failed), kept as-is for audit and easy remapping once the exact Donorbox payload is confirmed.</description>
</CustomField>