force-app/main/default/objects/Opportunity/fields/Donorbox_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Plan_Id__c</fullName>
    <label>Donorbox Plan Id</label>
    <length>255</length>
    <type>Text</type>
    <description>Donorbox recurring plan id (donation.plan_id), present only when Donorbox_Recurring__c is true.</description>
</CustomField>