force-app/main/default/objects/Opportunity/fields/Donorbox_Raw_Payload__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Raw_Payload__c</fullName>
    <label>Donorbox Raw Payload</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Raw JSON body received from the Donorbox webhook, kept for troubleshooting and to replay a record's origin payload if the mapping logic needs to change later.</description>
</CustomField>