force-app/main/default/objects/Opportunity/fields/Donorbox_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Recurring__c</fullName>
    <label>Donorbox Recurring</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when the Donorbox donation payload has recurring = true. Informational only - no dedicated recurring donation object is modeled yet, pending the NPSP/Person Accounts decision.</description>
</CustomField>