force-app/main/default/objects/Opportunity/fields/Donorbox_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Donorbox_Refunded__c</fullName>
    <label>Donorbox Refunded</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set to true when Donorbox reports the donation as refunded, independently of StageName so reporting logic doesn't depend on picklist labels.</description>
</CustomField>